# Trading-setups

./: README.md
Trading_setup_for_forex_with_IB/: LICENSE  README.md  Start_here_documentation.md  Strategy_documentation.ipynb  Strategy_documentation.md  The trading setup references.docx  The_trading_setup_references.md  Trading_forex_algorithmically_start_here_document.docx  Trading_forex_algorithmically_start_here_document.md  Trading_forex_algorithmically_strategy_document.docx
ib_forex_setup/: Changelog.md  LICENSE.txt  README.md  pyproject.toml
ib_forex_setup/changelog/: changelog.md
ib_forex_setup/doc/: Developer_documentation.md  Start_here_documentation.md  Strategy_documentation.md  The_trading_setup_references.md  old_strategy_documentation.md
ib_forex_setup/samples/: main.py  strategy.py
ib_forex_setup/src/: __init__.py  create_database.py  engine.py  ib_functions.py  setup.py  setup_for_download_data.py  setup_functions.py  trading_functions.py
ib_forex_setup/src/ib_forex_setup/: create_database.py  engine.py  ib_functions.py  setup.py  setup_for_download_data.py  setup_functions.py  trading_functions.py
ib_forex_setup/src/ib_forex_setup.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ib_forex_setup/user_config/: main.py  strategy.py
