# Toml config file for the forex trading setup
# Author: Jose Carlos Gonzales Tanaka

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ib_forex_setup"
version = "1.0.1"
authors = [{name = "Jose Carlos Gonzales Tanaka"}]

dependencies = [
    'featuretools~=1.31.0',
    'numpy~=2.0.2',
    'pandas~=2.2.3',
    'hmmlearn~=0.3.3',
    'lightgbm~=4.6.0',
    'matplotlib-inline~=0.1.6',
    'openpyxl~=3.1.5',
    'scikit-learn~=1.6.1',
    'scipy~=1.15.0',
    'statsmodels~=0.14.4',
    'ta~=0.11.0',
    'yfinance~=0.2.61',
    'shap-hypetune~=0.2.7',
]

description = "A trading setup to trade forex assets algorithmically using the Interactive Brokers' API"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.12"
keywords = ["trading", "trading-setup", "trading-app", "forex-assets", "Interactive-Brokers", "algorithmic-trading", "EPAT-content-team", "QuantInsti", "IB API"]
license = {text = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = [
    "dist*",
    "doc*",
    "res*",
    "samples*",
    "previous_versions*",
    "changelog*"
]


[project.urls]
"QuantInsti Homepage" = "https://www.quantinsti.com/"
"Author's LinkedIn profile" = "https://www.linkedin.com/in/jose-carlos-gonzales-tanaka/"
Repository = "https://github.com/QuantInsti/Trading-setups/tree/main/ib_forex_setup"
"Start-here documentation" = "https://github.com/QuantInsti/Trading-setups/blob/main/ib_forex_setup/doc/Start_here_documentation.md"
"Strategy documentation" = "https://github.com/QuantInsti/Trading-setups/blob/main/ib_forex_setup/doc/Strategy_documentation.md"
"Trading setup references" = "https://github.com/QuantInsti/Trading-setups/blob/main/ib_forex_setup/doc/The_trading_setup_references.md"
"Developer's documentation" = "https://github.com/QuantInsti/Trading-setups/blob/main/ib_forex_setup/doc/Developer_documentation.md"
